--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index"
+    "start":"nodemon index"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.10",
-    "nodemon": "^2.0.15",
-    "shortid": "^2.2.16"
+    "nodemon": "^2.0.15"
   }
 }
