--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.15",
+    "razorpay": "^2.8.1",
     "shortid": "^2.2.16"
   }
 }
